--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
-h1, h2 {
+h1,
+h2 {
   font-family: Lato;
+}
+
+#app {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+#app > div {
+  min-width: 48px;
+  max-width: 240px;
 }
